fix: overflow title on mobile

--- a/assets/css/tailwind.css
+++ b/assets/css/tailwind.css
@@ -12,9 +12,7 @@ html {
 }
 
 h1,
-h2,
-h3,
-h4 {
+h2 {
    font-family: "Aachen", sans-serif;
    font-weight: bold;
 }
